Added album view and implemented addPhoto method.

--- a/app/src/main/res/layout/delete_album_dialog.xml
+++ b/app/src/main/res/layout/delete_album_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.evanloriot.androidphotos18.Home">
+    tools:context="com.evanloriot.androidphotos18.activities.Home">
 
 
     <android.support.constraint.ConstraintLayout
