--- a/app/src/main/res/layout/activity_album_view.xml
+++ b/app/src/main/res/layout/activity_album_view.xml
@@ -4,71 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.evanloriot.androidphotos18.activities.Home">
+    tools:context="com.evanloriot.androidphotos18.activities.AlbumView">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout2"
+        android:id="@+id/constraintLayout1"
         android:layout_width="368dp"
         android:layout_height="70dp"
         android:minHeight="70dp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/createAlbum"
+            android:id="@+id/addPhoto"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="@string/createAlbum"
+            android:text="@string/addPhoto"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/renameAlbum"
+            app:layout_constraintEnd_toStartOf="@+id/movePhoto"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/renameAlbum"
+            android:id="@+id/movePhoto"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="@string/renameAlbum"
+            android:text="@string/movePhoto"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/deleteAlbum"
+            app:layout_constraintEnd_toStartOf="@+id/deletePhoto"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/createAlbum"
+            app:layout_constraintStart_toEndOf="@+id/addPhoto"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/deleteAlbum"
+            android:id="@+id/deletePhoto"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="@string/deleteAlbum"
+            android:text="@string/deletePhoto"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/renameAlbum"
+            app:layout_constraintStart_toEndOf="@+id/movePhoto"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/constraintLayout2"
         android:layout_width="368dp"
         android:layout_height="424dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">
 
-        <ListView
-            android:id="@+id/albums"
+        <GridView
+            android:id="@+id/photos"
             android:layout_width="352dp"
             android:layout_height="415dp"
+            android:columnWidth="90dp"
+            android:numColumns="auto_fit"
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
