--- a/app/src/main/res/layout/album_grid_item.xml
+++ b/app/src/main/res/layout/album_grid_item.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
+        android:visibility="visible"
         android:id="@+id/photo_thumb"
         android:layout_width="90dp"
         android:layout_height="90dp" />
+
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/photo_thumb"
+        app:layout_constraintEnd_toStartOf="@+id/photo_thumb"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/photo_thumb"
+        app:layout_constraintTop_toBottomOf="@+id/photo_thumb"
+        app:srcCompat="@android:drawable/checkbox_on_background" />
+
 
 </android.support.constraint.ConstraintLayout>
