--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="pressed_color">#0000FF</color>
+    <color name="pressed_color">#d3d3d3</color>
     <color name="default_color">#FFFFFF</color>
 </resources>
