--- a/app/src/main/res/layout/activity_album_view.xml
+++ b/app/src/main/res/layout/activity_album_view.xml
@@ -67,8 +67,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="368dp"
-        android:layout_height="424dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="360dp"
+        app:layout_constraintBottom_toBottomOf="@id/constraintLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,18 +77,35 @@
         <GridView
             android:id="@+id/photos"
             android:layout_width="352dp"
-            android:layout_height="415dp"
+            android:layout_height="360dp"
             android:columnWidth="90dp"
-            android:numColumns="auto_fit"
-            android:verticalSpacing="10dp"
-            android:horizontalSpacing="10dp"
-            android:stretchMode="columnWidth"
             android:gravity="center"
+            android:horizontalSpacing="10dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/constraintLayout2" />
 
     </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">
+
+        <Button
+            android:id="@+id/slideshow"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:text="@string/slideshow"
+            android:textSize="12sp"
+            tools:layout_editor_absoluteX="8dp" />
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
